test/lit/pto/fusion_region_verify_yield_type_mismatch.pto
// RUN: not ptoas --pto-level=level3 --emit-pto-ir %s 2>&1 | FileCheck %s

module {
  func.func @fusion_region_yield_type_mismatch_invalid() {
    %c0 = arith.constant 0 : index
    %0 = pto.fusion_region {
      pto.yield(%c0) : (index) -> ()
    } : i32
    return
  }
}

// CHECK: error: 'pto.fusion_region' op expects yielded value #0 to have type 'i32', got 'index'
